Color Changer finished

--- a/Color Changer/ColorChanger.html
+++ b/Color Changer/ColorChanger.html
@@ -8,22 +8,25 @@
 </head>
 <body>
     <h1>Background Color Changer Web-Application</h1>
+    <div class="MainContainer">
     <div class="Container">
-        <div id="red">
+        <div class="color" id="red">
             RED
         </div>
-        <div id="blue">
+        <div class="color" id="blue">
             BLUE
         </div>
-        <div id="yellow">
+        <div class="color" id="yellow">
             YELLOW
         </div>
-        <div id="Green">
+        <div class="color" id="green">
             GREEN
         </div>
-        <div id="black">
+        <div class="color" id="black">
             BLACK
         </div>
     </div>
+    </div>
+    <script src="ColorChanger.js"></script>
 </body>
 </html>
